--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a style="text-decoration: none; color: white;" href="#about-us" >О нас</a>
                     </div>
                     <div class="col-3 col-xxl-1 pt-1" id="NavElement">
-                        Контакты
+                        <a style="text-decoration: none; color: white;" href="#contacts" >Контакты</a>
                     </div>
                     <div class="col-2 col-xxl-1 pt-1 nav-hidden" id="NavElement">
                         <a href="https://vk.com/aerox_studio" target="_blank" rel="noreferrer"><img src="resources/vk.svg" width="25" height="25" class="nav-icon me-3 "></a>
@@ -122,6 +122,7 @@
             </div>
             <footer>
                 <div class="container-fluid">
+                    <div id="#contacts"></div>
                  <div class="row justify-content-center align-items-center mt-5 pb-5">
                     <div class="col-6 col-md-4 col-xxl-4">
                         <img class="footer-logo" src="" width="50" height="50"><span class="footer-title ms-2">AEROX STUDIO<br></span>
