--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <footer>
                 <div class="container-fluid">
-                    <div id="#contacts"></div>
+                    <div id="contacts"></div>
                  <div class="row justify-content-center align-items-center mt-5 pb-5">
                     <div class="col-6 col-md-4 col-xxl-4">
                         <img class="footer-logo" src="" width="50" height="50"><span class="footer-title ms-2">AEROX STUDIO<br></span>
